<resources>
    <string name="app_name">MotoMeter</string>
    <string name="activity_edit_profile_title">Edit Profile Information</string>
    <string name="activity_edit_profile_image">IMAGE</string>
    <string name="activity_edit_task_title">Edit Task Information</string>
    <string name="activity_edit_task_interval_prompt">Interval</string>
    <string name="activity_edit_task_completed_at_prompt">Completed At</string>
    <string name="empty_profile_list">PROFILE(S) NOT CREATED YET</string>
    <string name="activity_new_cl_item_title_prompt">Inspection Title</string>
    <string name="activity_new_cl_item_value_hint">e.g. Fluids, Chain Tension…</string>
    <string name="activity_new_profile_title">Enter Profile Information</string>
    <string name="activity_new_profile_year">YEAR</string>
    <string name="activity_new_profile_make">MAKE</string>
    <string name="activity_new_profile_model">MODEL</string>
    <string name="activity_new_profile_hourmeter">HOURMETER</string>
    <string name="activity_new_profile_year_hint">eg. 2020</string>
    <string name="activity_new_profile_make_hint">manufacturer name</string>
    <string name="activity_new_profile_model_hint">model series</string>
    <string name="activity_new_profile_hourmeter_hint">e.g. 12.7</string>
    <string name="activity_new_task_title">Enter Task Information</string>
    <string name="activity_new_task_name_prompt">Task Name</string>
    <string name="activity_new_task_name_value_hint">eg. Engine Oil Change</string>
    <string name="activity_new_task_interval_prompt">Maintenance Interval</string>
    <string name="activity_new_task_interval_value_hint">e.g. 7.5</string>
    <string name="activity_new_task_last_completed_at_prompt">Last Completed At</string>
    <string name="activity_new_task_last_completed_at_value_hint">e.g. 0.0</string>
    <string name="activity_post_ride_prompt">New Hourmeter Reading</string>
    <string name="empty_checklist_list">CHECKLIST ITEM(S) NOT CREATED YET</string>
    <string name="activity_pre_ride_ready">Pin it!</string>
    <string name="activity_pre_ride_not_ready">Park it?</string>
    <string name="activity_profile_overview_home">HOME</string>
    <string name="activity_profile_overview_maintenance">Maintenance</string>
    <string name="activity_profile_overview_post_ride">Post-Ride</string>
    <string name="activity_profile_overview_pre_ride">Pre-Ride</string>
    <string name="activity_profile_overview_notes">Notes / Specs</string>
    <string name="activity_profile_overview_edit">Edit Profile</string>
    <string name="activity_task_sign_off_interval">Maintenance interval:</string>
    <string name="activity_task_sign_off_last_at">Last completed at:</string>
    <string name="activity_task_sign_off_due_in">Maintenance due in:</string>
    <string name="activity_task_sign_off_at">Sign off at:</string>
    <string name="empty_task_list">TASK(S) NOT CREATED YET</string>
    <string name="checklist_card_view_complete">Completed</string>
    <string name="profile_card_hourmeter">Hourmeter:</string>
    <string name="profile_card_view_hrs"> hrs.</string>
    <string name="profile_card_view_no_maintenance_due">No Maintenance Due</string>
    <string name="profile_card_view_maintenance_due">Maintenance Due Soon</string>
    <string name="profile_card_no_tasks">No tasks being tracked</string>
    <string name="profile_card_inspection_status">Pre-ride Inspection Status</string>
    <string name="task_card_view_due_in">Maintenance due in</string>
    <string name="toolbar_info">help</string>
    <string name="toolbar_edit_profile_title">Edit Profile</string>
    <string name="toolbar_edit_profile_icon_save">save</string>
    <string name="toolbar_edit_profile_icon_clear">clear form</string>
    <string name="toolbar_edit_profile_delete">delete profile</string>
    <string name="toolbar_edit_task_title">Edit Task</string>
    <string name="toolbar_edit_task_icon_save">save</string>
    <string name="toolbar_edit_task_icon_clear">clear form</string>
    <string name="toolbar_main_title">MotoMeter</string>
    <string name="toolbar_main_add_profile">add</string>
    <string name="toolbar_new_checklist_item_title">New Checklist Item</string>
    <string name="toolbar_new_profile_title">New Profile</string>
    <string name="toolbar_new_profile_icon_clear">clear form</string>
    <string name="toolbar_new_task_title">New Maintenance Task</string>
    <string name="toolbar_new_task_icon_clear">clear form</string>
    <string name="toolbar_notes_title">Notes</string>
    <string name="toolbar_notes_icon_save">save</string>
    <string name="toolbar_notes_icon_clear">clear</string>
    <string name="toolbar_post_ride_title">Update Hourmeter</string>
    <string name="toolbar_pre_ride_title">Pre-Ride Inspection</string>
    <string name="toolbar_pre_ride_icon_add">add</string>
    <string name="toolbar_pre_ride_delete_title">delete item</string>
    <string name="toolbar_pre_ride_delete_all_title">delete all</string>
    <string name="toolbar_profile_overview_title">Profile Home</string>
    <string name="toolbar_profile_overview_icon_edit">edit profile</string>
    <string name="toolbar_profile_overview_icon_delete">delete profile</string>
    <string name="toolbar_task_sign_off_title">Maintenance Task</string>
    <string name="toolbar_task_sign_off_icon_edit">edit task</string>
    <string name="toolbar_task_sign_off_icon_delete">delete task</string>
    <string name="toolbar_tasks_overview_title">Maintenance Overview</string>
    <string name="toolbar_tasks_overview_icon_add">new task</string>
    <string name="bottom_nav_home">home</string>
    <string name="bottom_nav_maintenance">maintenance</string>
    <string name="bottom_nav_post_ride">post-ride</string>
    <string name="bottom_nav_pre_ride">pre-ride</string>
    <string name="bottom_nav_notes">notes</string>
    <string name="validation_entry_required">entry required</string>
    <string name="validation_hours_lte_current">must be &lt;= current engine hours</string>
    <string name="validation_hours_gt_current">must be &gt; previous engine hours</string>
    <string name="alert_dialog_delete_profile_title">Delete Profile</string>
    <string name="alert_dialog_delete_profile_message">Permanently delete this profile?</string>
    <string name="alert_dialog_delete_task_title">Delete Maintenance Task</string>
    <string name="alert_dialog_delete_task_message">Permanently delete this task?</string>
    <string name="alert_dialog_delete_all_clItems_title">Delete All Checklist Items</string>
    <string name="alert_dialog_delete_all_clItems_message">Permanently delete all checklist items?</string>
    <string name="alert_dialog_delete_checklist_item_message">
        Permanently delete this checklist item?</string>
    <string name="alert_dialog_confirm">CONFIRM</string>
    <string name="alert_dialog_cancel">CANCEL</string>
    <string name="alert_dialog_notify_saved">saved</string>
    <string name="activity_edit_profile_information">Edit the year, make, model, and hourmeter
        values in the corresponding fields.\n\nSelecting \'clear form\' from the toolbar menu above
        will clear the text fields but will not affect the profile image.\n\n*The updated
        information is only recorded if the save icon is selected in the toolbar above.*\n\nTouching
        the profile image area will display a prompt to either take a picture or to select an image
        from your phone\'s gallery. *Permissions are required for this action.*\n\nSelect \'delete
        profile\' from the toolbar menu to permanently remove this profile from the app.</string>
    <string name="activity_edit_task_information">Edit the task name/title, interval (hrs.), and the
        hourmeter value of when the task was last completed in the corresponding fields.
        \n\nSelecting \'clear form\' from the toolbar menu above will clear the text fields.
    </string>
    <string name="activity_main_information">Select the + icon in the toolbar menu above
        to create a new motorcycle profile.\n\nYou can switch between profiles by swiping left/right
        or by using the tabs near the top of the screen.\n\nTouch anywhere in the main view to
        interact with the corresponding profile.\n\nQuick links can be found at the bottom of the
        screen. Quick links from left to right are:\n\n\tMAINTENANCE (wrench icon) - create, view,
        and interact with maintenance tasks for the selected profile.\n\n\tPOST-RIDE (stopwatch
        icon) - update the profile\'s current hourmeter reading. This action updates the hours
        remaining for all tracked maintenance tasks and resets the pre-ride inspections.\n\n\tPRE-
        RIDE (checklist clipboard) - populate, view, and interact with the pre-ride inspection
        checklist.\n\n\tNOTES / SPECS (data clipboard) - a simple notepad to record desired notes,
        specs, torques, inspection criteria, etc.\n\nYou can edit/delete a profile by touching the
        pencil icon in the top right corner of the profile view, to the right of the profile title.
        A profile image can be added/edited by touching the outlined image view in the \'Edit
        Profile\' screen.</string>
    <string name="activity_new_checklist_item_information">Supply the inspection name/title and
        select the check mark to add an inspection to the checklist.\n\nSelect the back arrow or
        the cancel(x) button to abort and return to the previous screen.</string>
    <string name="activity_new_profile_information">Enter the motorcycle\'s year, make, model and
        current hourmeter reading in the corresponding fields.\n\nTouch the check mark to save the
        profile to the database.\n\nA profile image can be added after the profile is created by
        touching the profile image area of the \'edit profile\' page.\n\nSelect the back arrow
        or the cancel(x) button to abort and return to the previous screen.</string>
    <string name="activity_new_task_information">Enter the maintenance task\'s name/title, interval
        (hrs.), and the hourmeter value of when the task was last completed in the corresponding
        fields.\n\nTouch the check mark to save the task to the database.\n\nSelect the back arrow
        or the cancel(x) button to abort and return to the previous screen.</string>
    <string name="activity_notes_information">Use this space to consolidate/maintain any profile
        specific information, e.g. maintenance steps, torque specs, dimensions, clearances, etc.
        \n\nSelecting \'clear\' from the toolbar menu above will clear all notes.\n\n*The
        updated information is only recorded if the save icon is selected in the toolbar above.*
    </string>
    <string name="activity_post_ride_information">Supply the new hourmeter reading and select the
        check mark to update the profile\'s current hours.\n\nSelect the back arrow or the
        cancel(x) button to abort and return to the previous screen.</string>
    <string name="activity_pre_ride_information">Select the + icon in the toolbar menu above to
        create a new pre-ride inspection checklist item.\n\nChecklist items can be removed by
        selecting \'delete item\' or \'delete all\' from the toolbar menu above.\n\nWhen the
        profile\'s current hourmeter reading is updated in the post-ride screen the checklist items
        are reset.\n\nIf you do not wish to use the pre-ride inspection functionality, simply leave
        this list empty and the inspection status flag will not be set on the main profile
        selection page.</string>
</resources>