<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toolbar_edit_profile_icon_save"
        android:icon="@drawable/ic_save"
        android:title="@string/toolbar_edit_profile_icon_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_edit_profile_help"
        android:icon="@drawable/ic_info"
        android:title="@string/toolbar_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_edit_profile_icon_clear"
        android:title="@string/toolbar_edit_profile_icon_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_edit_profile_delete"
        android:title="@string/toolbar_edit_profile_delete"
        app:showAsAction="never" />

</menu>