<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.activities.NewProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_profile_toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/new_profile_toolbar_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/opaqueTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_profile_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_profile_window_cl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/accent_color_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_profile_toolbar_bottom_border">

        <Button
            android:id="@+id/new_profile_confirm_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_confrim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/new_profile_cancel_btn"
            app:layout_constraintTop_toBottomOf="@+id/new_profile_hourmeter_et" />

        <Button
            android:id="@+id/new_profile_cancel_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_profile_confirm_btn"
            app:layout_constraintEnd_toStartOf="@+id/new_profile_confirm_btn"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_profile_model_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/activity_new_profile_model_hint"
            android:inputType="textNoSuggestions"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_profile_model_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/new_profile_year_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/activity_new_profile_year_hint"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_profile_year_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/new_profile_make_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/activity_new_profile_make_hint"
            android:inputType="textNoSuggestions"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_profile_make_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/new_profile_hourmeter_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/activity_new_profile_hourmeter_hint"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_profile_hourmeter_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/new_profile_model_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/activity_new_profile_model"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_profile_make_tv" />

        <TextView
            android:id="@+id/new_profile_make_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/activity_new_profile_make"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_profile_year_tv" />

        <TextView
            android:id="@+id/new_profile_year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/activity_new_profile_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/new_profile_hourmeter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/activity_new_profile_hourmeter"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_profile_model_tv" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/activity_new_profile_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/info_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_profile_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>