<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NewTask">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_task_toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/new_task_toolbar_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/opaqueTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_toolbar" />

    <fragment
        android:id="@+id/new_task_header_f"
        android:name="com.slack.motometer.ui.fragments.ProfileHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_toolbar_bottom_border" />

    <View
        android:id="@+id/new_task_header_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/opaqueTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_header_f" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/accent_color_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_header_f">

        <Button
            android:id="@+id/new_task_confirm_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_confrim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/new_task_cancel_btn"
            app:layout_constraintTop_toBottomOf="@+id/new_task_last_completed_at_value_et" />

        <Button
            android:id="@+id/new_task_cancel_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_task_confirm_btn"
            app:layout_constraintEnd_toStartOf="@+id/new_task_confirm_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_task_last_completed_at_value_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="9"
            android:gravity="center"
            android:hint="@string/activity_new_task_last_completed_at_value_hint"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_task_last_competed_at_prompt_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/new_task_name_value_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="9"
            android:gravity="center"
            android:hint="@string/activity_new_task_name_value_hint"
            android:inputType="textNoSuggestions"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_task_title_prompt_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/new_task_interval_value_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="9"
            android:gravity="center"
            android:hint="@string/activity_new_task_interval_value_hint"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_task_interval_prompt_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/new_task_last_competed_at_prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/activity_new_task_last_completed_at_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_interval_prompt_tv" />

        <TextView
            android:id="@+id/new_task_interval_prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/activity_new_task_interval_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_title_prompt_tv" />

        <TextView
            android:id="@+id/new_task_title_prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/activity_new_task_name_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
            app:layout_constraintTop_toBottomOf="@+id/new_task_title_tv" />

        <TextView
            android:id="@+id/new_task_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/activity_new_task_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>